# Whatapp-PA

./: .env.example  .gitignore  Dockerfile  Dockerfile.chainlit  Makefile  README.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
docs/: GETTING_STARTED.md  before_we_begin.md  gcp_setup.md
notebooks/: character_card.ipynb  router.ipynb
src/: app.py  chainlit_app.py  fastapi_app.py  langchain_runnable.py  speech_to_text.py  text_to_image.py  text_to_speech.py
src/.chainlit/: config.toml
src/ai_companion/: settings.py
src/ai_companion/core/: character_card.py  exceptions.py  prompts.py  schedules.py
src/ai_companion/graph/: agent.py  edges.py  graph.py  nodes.py
src/ai_companion/graph/utils/: chains.py  edges.py  helpers.py  nodes.py  state.py
src/ai_companion/interfaces/chainlit/: app.py
src/ai_companion/interfaces/whatsapp/: webhook_endpoint.py  whatsapp_response.py
src/ai_companion/modules/image/: image_to_text.py  text_to_image.py
src/ai_companion/modules/memory/long_term/: memory_manager.py  vector_store.py
src/ai_companion/modules/schedules/: chat.py  context_generation.py  summary.py
src/ai_companion/modules/speech/: speech_to_text.py  text_to_speech.py
src/interfaces/: chainlit_app.py  fastapi_app.py  whatsapp_response.py
