[project]
name = "ai-companion"
version = "0.1.0"
description = "Your own AI buddy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.3.2",
    "elevenlabs>=1.50.3",
    "fastapi>=0.115.6",
    "groq>=0.13.1",
    "langchain-community>=0.3.13",
    "langchain-groq>=0.2.2",
    "langchain>=0.3.13",
    "pydantic==2.10.0",
    "together>=1.3.10",
]
